istio/http-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - '*.hubs365.com'
      - istio-demo.australiaeast.cloudapp.azure.com
    tls:
      httpsRedirect: true
